# task-crypkit

./: README.md  docker-compose.yaml  dockerfile  pyproject.toml
src/app/: coingecko_client.py  config.py  database.py  main.py  model.py  updating_dashboard_data.py
src/app/api/: endpoints.py  root.py  ws_connection_manager.py  ws_dashboard.py
src/app/templates/: index.html
tests/: test.py
